# embeddenator-obs

./: .copilot  CHANGELOG.md  COMPLETION_REPORT.md  Cargo.toml  FINAL_REPORT.md  INTEGRATION_GUIDE.md  MIGRATION_SUMMARY.md  README.md  README_OLD.md
.github/workflows/: ci.yml
examples/: advanced_features.rs  performance_benchmark.rs
src/: lib.rs
src/obs/: hires_timing.rs  logging.rs  metrics.rs  mod.rs  opentelemetry.rs  prometheus.rs  streaming.rs  telemetry.rs  test_metrics.rs  tracing.rs
tests/: integration_test.rs  obs_tests.rs
